styles.css
/* ... */
.featuredReviewSideButton:hover{
  background-color:rgb(45, 45, 45);
}

.featuredReviewSideLeftButton:hover{
  background-color:rgb(45, 45, 45);
}

/* Big image button.*/
.featuredReviewMain{
  background-color: rgb(0,0,0);
  background-image: url("foodImages/burger/burger5.jpg");
  background-size: contain, cover;
  background-position: center;
  background-repeat: no-repeat;
  color: white;
  text-shadow: -3px -3px 0 black,
  3px -3px 0 black,
  -3px 3px 0 black,
  3px 3px 0 black,
  -3px 0 0 black,
  3px 0 0 black,
  0 -3px 0 black,
  0 3px 0 black;
  display: inline-block;
  width: 55%;
  height: 95%;
  font-family: Arial, Helvetica, sans-serif;
  font-weight: bold;
  font-size: xx-large;
  text-align: center;
  text-decoration: none;
  border-radius: 25px;
}

/* End of Featured Review CSS.*/
/* Restaurants / Food Items CSS.*/

.mainMenu h1{
  background-color: rgb(35, 35, 35);
  color: rgba(187,134,252, 200);
  font-family: Arial, Helvetica, sans-serif;
  text-align: center;
  width: auto;
  padding: 20px;
  font-size: 35px;
  border-radius: 25px;
  margin-top: 0px;
  padding-left: -5%;
}

.mainMenu h2{
  color: rgba(187,134,252, 200);
  font-size: 30px;
  font-family: Arial, Helvetica, sans-serif;
  text-align: center;
  width: auto;
  padding: 10px;
  border-radius: 25px;
  margin-top: 0px;
}

.mainMenu ul{
  overflow:hidden;
  overflow-y:scroll;
  height: 85%;
  padding-left: 5%;
  padding-top: 0;
  list-style: none;
  width: auto;
  border-bottom-right-radius: 25px;
  border-bottom-left-radius: 25px;
}

/* Actual Food and Restaurant Chocies .*/
.mainMenu button{
  background-color: rgb(25,25,25);
  color: white;
  float: left;
  font-family: Arial, Helvetica, sans-serif;
  font-weight: bold;
  font-size: xx-large;
  text-decoration: none;
  float: left;
  margin: 5px;
  padding: 15px 0px 15px 30px;
  width: 94%;
  height: 15%;
  border-style: solid;
  border-color: white;
  border-radius: 25px;
  text-align: left;
}

.mainMenu button:hover{
  background-color: rgb(45, 45, 45);
}

.ingredients input, .ingredients label{
  background-color: rgb(25,25,25);
  color: white;
  font-family: Arial, Helvetica, sans-serif;
  font-weight: bold;
  font-size: x-large;
  text-decoration: none;
  text-align: left;
  margin-bottom: 5px;
  margin-top: 0px;
  vertical-align:left;
}

.ingredients ul{
  height:100px;
  vertical-align:left;
  align-items: left;
}

.ingredients input{
  margin-left:50px;
}


/* END OF MAIN MENU CSS .*/
/* FOOTER CSS .*/

.modal-content {
  margin: 5% auto 15% auto;
  border: 1px solid #888;
  width: 60%;
  padding: 60px;
}


.animate {
  animation: animatezoom 0.6s
}

@keyframes animatezoom {
  from {transform: scale(0)}
  to {transform: scale(1)}
}

.modal {
  display: none;
  font-family: Arial, Helvetica, sans-serif;
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgb(25,25,25);
  padding: 60px;
}

.modal-content {
  margin: 5% auto 15% auto;
  border: 1px solid #888;
  width: 60%;
  padding: 60px;
}

.headerButton {
  border: none;
  background-color: #03DAC5;
  font-size:22px;
  margin: 10px;
  padding: 5px;
  overflow: hidden;
  border-radius: 15px;
  font-weight: bold;
}

.cancelButton {
  border: none;
  background-color: rgb(255, 0, 0);
  font-size:22px;
  margin: 10px;
  padding: 5px;
  overflow: hidden;
  border-radius: 15px;
  font-weight: bold;
}


#headerButtons{
  color: rgba(187,134,252, 200);

}

.headerButton:hover {
  background-color: rgb(45, 45, 45);
}


.cancelButton:hover {
  background-color: rgba(255, 0, 0, 0.4);
}


/* CART PAGE.*/
.cartHeader {
  padding: 30px;
  text-align: center;
  font-size: 35px;
  color: rgb(187,134,252);
  grid-area: cheader;
}

.acceptButton {
  border: none;
  background-color: #03DAC5;
  font-size:22px;
  margin: 10px;
  padding: 5px;
  overflow: hidden;
  border-radius: 15px;
  font-weight: bold;
  height: 1%;
}
.acceptButton:hover {
  background-color: rgb(45, 45, 45);
}

.cart1 {
  width: 48%;
  height: 500px;
  float:left;
  border: 1px solid white;
  color: rgb(187,134,252);
  grid-area: cart1;
}

.cart2 {
  width:48%;
  float:left;
  height: 500px;
  border: 1px solid white;
  color: rgb(187,134,252);
  grid-area: cart2;
}

.footerCart {
  bottom: 0;
  width: auto;
  padding: 20px;
  background-color: rgb(25,25,25);
  color: white;
  text-align: center;
  font-family: Arial, Helvetica, sans-serif;
  font-weight: bold;
  font-size: large;
  grid-area: ffooter;
}

.footerCart a{

  font-family: Arial, Helvetica, sans-serif;
  text-align: center;
  color:white;
  text-decoration: none;

}




p {
  font-family: Arial, Helvetica, sans-serif;
  text-align: center;
  color:white;
  font-weight: bold;
  font-size: large;
}


.left {
  float: left;
}

.right {
  float: right;
}

::-webkit-scrollbar {
  width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  background: rgb(18, 18, 18);
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: rgb(35, 35, 35);
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: rgb(45, 45, 45);
}

